@@ -27,11 +27,12 @@ private:
     std::vector<Button*> m_buttons_home;
     std::vector<Button*> m_buttons_level_selection;
     std::vector<Button*> m_buttons_credits;
+    std::vector<Button*> m_buttons_in_game;
     std::vector<Theme*> m_themes;
     // Loop controller
     bool m_first_loop;
     // Grid (level)
-    int m_selected_level;
+    std::string m_selected_level;
     // TODO
     // make a method / class that loads a level and put it in m_grid
     Grid* m_grid;
@@ -53,9 +54,13 @@ private:
     bool isOnButton(Button *b) const;
     bool isOnCell(Grid* g) const;
     void changeButtonAppareance(const bool &onButton, Button* b);
-    void changeState(const bool &onButton, Button* b);
     void loop()  override;
     void loadBackground();
+
+    void changeSelectedCell();
+
+    void buttonChangeState(const bool &onButton, Button* b);
+    void changeGameState(const Utils::State &s);
 
 };
 
