@@ -1,2 +1,10 @@
 FILE NAME WHATEVER YOU WANT
 pos_x;pos_y;height(0 to x);light(0=false,1=true)
+
+## Notes:
+0.txt --> level selection
+example.txt --> this
+
+XY.txt --> level corresponding to the level selection
+	-> The cell selected has a x and y pos, this is
+	-> the id of the level
