@@ -1,0 +1,7 @@
+debug
+0;0;0;0
+1;0;0;1
+0;1;0;0
+1;1;0;1
+1;2;0;0
+2;1;0;0
